# linear-library

./: CMakeLists.txt  DecomposeLU_8hpp.html  DecomposeLU_8hpp__incl.map  DecomposeLU_8hpp__incl.md5  DecomposeLU_8hpp_source.html  FlatMatrix_8hpp.html  FlatMatrix_8hpp__dep__incl.map  FlatMatrix_8hpp__dep__incl.md5  FlatMatrix_8hpp__incl.map  FlatMatrix_8hpp__incl.md5  FlatMatrix_8hpp_source.html  Inversion_8hpp.html  Inversion_8hpp__incl.map  Inversion_8hpp__incl.md5  Inversion_8hpp_source.html  LU_8hpp.html  LU_8hpp__dep__incl.map  LU_8hpp__dep__incl.md5  LU_8hpp__incl.map  LU_8hpp__incl.md5  LU_8hpp_source.html  MatrixBase_8hpp.html  MatrixBase_8hpp__dep__incl.map  MatrixBase_8hpp__dep__incl.md5  MatrixBase_8hpp__incl.map  MatrixBase_8hpp__incl.md5  MatrixBase_8hpp_source.html  QR_8hpp.html  QR_8hpp__incl.map  QR_8hpp__incl.md5  QR_8hpp_source.html  README.md  VectorMatrix_8hpp.html  VectorMatrix_8hpp__dep__incl.map  VectorMatrix_8hpp__dep__incl.md5  VectorMatrix_8hpp__incl.map  VectorMatrix_8hpp__incl.md5  VectorMatrix_8hpp_source.html  _formulas.tex  _formulas_dark.tex  (+79 more)
.github/workflows/: deploy-docs.yaml
benchmarks/: benchmark.cpp
cmake/: LinearAlgebra.cmake  LinearAlgebraConfig.cmake.in
docs/: Doxyfile
include/: Calculator.h  Calculator.hpp  Formatter.hpp  LU.hpp  Matrix.hpp  MatrixOperation.h  MultiplyOperation.hpp  ScalarMultiplyOperation.hpp  TransponseOperation.hpp
include/decompose/LU/: DecomposeLU.hpp  LU.hpp
include/libs/LU/: LU.hpp
include/libs/vector_matrix/: VectorMatrix.hpp
include/linear-algebra/LU/: DecomposeLU.hpp  Inversion.hpp  LU.hpp
include/linear-algebra/QR/: QR.hpp
include/linear-algebra/vector_matrix/: FlatMatrix.hpp  MatrixBase.hpp  VectorMatrix.hpp
include/matrix/: FlatMatrix.hpp  MatrixBase.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt  Calculator.cpp  Matrix.hpp  main.cpp
tests/: CMakeLists.txt  FlatMatrixTest.cpp  LU_Test.cpp  LU_inplaceTest.cpp  MatrixTest.cpp  VectorMatrixTest.cpp
